--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="chuck.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Chuck Norris Facts</title>
 </head>
@@ -15,15 +15,16 @@
             <button id="btn-quote" class="facts" value="citation">
                 <p>New Quotes</p>
             </button>
-            <button class="facts">Encore</button>
-            <button class="facts">Plus</button>
-            <button class="facts">De</button>
-            <button class="facts">Facts</button>
         </div>
     </div>
 
     <script>
-        let tab = ["C'est Chuck Norris qui a crée le langage C", "Chuck Norris peut créer un traitement de texte avec la souris", "L'ordinateur de Chuck Norris n'a pas de bouton CTRL, Chuck Norris a toujours le contrôle", "Chuck Norris sait comment créer une clé étrangére sur MYSQL"];
+        let tab = ["C'est Chuck Norris qui a crée le langage C", 
+        "Chuck Norris peut créer un traitement de texte avec la souris", 
+        "L'ordinateur de Chuck Norris n'a pas de bouton CTRL, Chuck Norris a toujours le contrôle", 
+        "Chuck Norris sait comment créer une clé étrangére sur MYSQL",
+        "Chuck Norris peut réssusciter un angle mort",
+        "Chuck Norris à déjà fait une erreur, juste pour voir"];
         let quotes = document.getElementsByClassName("facts");
         let p = document.getElementsByClassName("citation");
         
